<resources>
    <string name="app_name">Candy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_defould_username">WEEIDL</string>
    <string name="settings_defould_staatus">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_numper">+79882006167</string>
    <string name="settings_label_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="weeidl">WEEIDL</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="Выход">settings_menu_exit</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS \n с кодом проверки на телефон</string>
    <string name="register_hint_defould_code">- - - - - -</string>
    <string name="register_title_your_phone"></string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="settings_hint_imput_name">Имя</string>
    <string name="settings_hint_imput_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_imput_username">username</string>
    <string name="settings_input_bio">bio</string>
</resources>