<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacgraund"
    tools:context=".ui.fragment.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bacgraund_two"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>

            <GridLayout
                android:id="@+id/settings_user_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bacgraund_two"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">



<!--                        Аккаунт-->

<!--                        <TextView-->
<!--                            android:id="@+id/settings_text_account"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->

<!--                            android:text="@string/settings_text_account"-->
<!--                            android:textColor="@color/text_color_blue"-->
<!--                            android:textSize="18sp"-->
<!--                            android:textStyle="bold" />-->

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/settings_btn_change_number_phone"
                            style="@style/settingsButtons"
                            android:layout_gravity="center"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                            <TextView
                                android:id="@+id/settings_phone_number"
                                style="@style/normalText"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
                                tools:text="@string/settings_default_numper" />

                            <TextView

                                android:id="@+id/settings_label_phone_number"
                                style="@style/smallText"
                                android:text="@string/settings_label_phone_number"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/settings_phone_number" />

                            <View
                                style="@style/separator"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/settings_btn_change_username"
                            style="@style/settingsButtons"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone">

                            <TextView
                                android:id="@+id/settings_username"
                                style="@style/normalText"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
                                tools:text="@string/weeidl" />

                            <TextView
                                android:id="@+id/settings_label_username"
                                style="@style/smallText"
                                android:text="@string/settings_label_login"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/settings_username" />

                            <View
                                style="@style/separator"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/settings_label_username" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/settings_btn_change_bio"
                            style="@style/settingsButtons"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username">

                            <TextView
                                android:id="@+id/settings_bio"
                                style="@style/normalText"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
                                tools:text="@string/settings_default_bio" />


                            <TextView
                                android:id="@+id/settings_label_bio"
                                style="@style/smallText"
                                android:text="@string/settings_label_bio"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/settings_bio" />

                            <View
                                style="@style/separator"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/settings_label_bio" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:elevation="800dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bacgraund_two"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:text="Защита"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_bloc"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_witht"
            android:layout_height="@dimen/setinngs_user_photo_heihgt"
            android:layout_marginStart="30dp"
            android:src="@drawable/defouid_photo"
            app:civ_border_color="@color/text_color_blue"
            app:civ_border_width="@dimen/settings_user_photo_border"
            app:civ_circle_background_color="@color/text_color_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normalText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo"
            tools:text="@string/settings_defould_username" />

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/SmallText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name"

            tools:text="@string/settings_defould_staatus" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_change_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="42dp"
            android:src="@drawable/ic_baseline_add_photo_alternate_24"
            app:layout_constraintBottom_toBottomOf="@+id/settings_header_bloc"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
